<resources>
    <string name="app_name">Tanvir Ahmmed</string>
    <string name="main_image_description">Main Image</string>
    <string name="name_hint">Name</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="email_hint">Email Address</string>
    <string name="submit_button_text">Submit</string>
    <string name="home">Home</string>
    <string name="contact_me">Contact Me</string>
    <string name="about_us">About Me</string>
    <string name="complain_us">Complain Us</string>
</resources>